# ai-gateway

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPROVEMENT_CHANGELOG.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_QUESTIONS.md  IMPROVEMENT_SESSION_CONTEXT.md  INSTALL.md  LICENSE  README.md  RESOURCE_OPTIMIZATION_PLAN.md  SECURITY.md  SYSTEMD.md  ai-gateway  ai-gateway.service  artifact-management.md  check_e2e_tests.sh  continue-dev.sh  coverage.xml  docker-compose.yml  env.example  monitor_e2e_tests.sh  nginx-external-fixed.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run_e2e_tests_safe.sh  setup.bat  setup.sh  setup_virtual_key.bat  setup_virtual_key.py  setup_virtual_key.sh  start.bat  start.sh  stop.bat  stop.sh  update.sh  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: impl-planner.agent.md  vibe-coder.agent.md
.github/chatmodes/: vibe-coder.chatmode.md
docs/: DOCUMENTATION_VERIFICATION_PLAN.md  FAQ.md  README.md  SECURE_API_KEY_INSTRUCTIONS.md  architecture.md  concept.md  configuration.md  getting-started.md  glossary.md  installation.md  security.md  system-requirements.md  troubleshooting.md
docs/administration/: systemd.md
docs/ai/: ARTIFACTS_CONCEPT.md  IMPLEMENTATION_CHANGELOG.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUESTIONS.md  IMPLEMENTATION_SESSION_CONTEXT.md  KB_SECTION_PRIORITIES.md  PROMPT_ENGINEERING_KNOWLEDGE_BASE.md  PROMPT_ENGINEERING_KNOWLEDGE_BASE_EN.md  artifact-management.md
docs/ci-cd/: github-actions-e2e.md
docs/configuration/: virtual-key.md
docs/examples/: README.md  configuration-examples.md  integration-examples.md  javascript-basic.md  python-basic.md
docs/integrations/: api-for-agents.md  continue-dev.md  github-copilot.md
docs/nginx/: README.md  external-nginx-example.conf
nginx/: nginx.conf
scripts/: setup_continue_dev.sh
src/: __init__.py  __main__.py  budgets.py  check_dependencies.py  checks.py  cli.py  config.py  config_generator.py  docker_compose.py  env_generator.py  nginx.py  platform_utils.py  ports.py  python_check.py  script_init.bat  script_init.py  script_init.sh  script_init_bash.sh  setup_virtual_key.py  utils.py  validators.py  venv_setup.py  virtual_key.py
src/application/: __init__.py  continue_dev_service.py  services.py  setup_service.py  start_service.py
src/core/: __init__.py  config.py  constants.py  exceptions.py
src/infrastructure/: __init__.py  docker_client.py  file_repository.py  logger.py  openwebui_db.py  output.py  security.py  systemd_service.py
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  test_api_with_mocks.py  test_full_cycle.py  test_negative_scenarios.py
tests/integration/: __init__.py  test_config_service.py  test_docker_client.py
tests/unit/: __init__.py
tests/unit/test_core/: __init__.py  test_config.py  test_constants.py  test_exceptions.py
tests/unit/test_infrastructure/: __init__.py  test_file_repository.py  test_logger.py  test_output.py  test_security.py
